# pyrula-software

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
docs/: index.md  solutions.md
search/: search_index.json
solutions/: index.html
